# UnBeatables2025

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  UnBeatables.cpp  UnBeatables.sh  config.ini  main.cpp
include/: Builder.hpp  ConnectionConfig.hpp  ConnectionSettings.hpp  NaoConnectionConfig.hpp  UnBeatables.hpp  UnBoard.hpp  connectionConfig.hpp
include/action/: Action.hpp
include/action/motion/: Motion.h
include/action/speak/: Speak.h
include/behavior/: Behavior.hpp  Behavior.py
include/communication/: Communication.hpp
include/communication/gameController/: GameController.hpp
include/communication/socket/client/: Client.hpp  TCPClient.hpp  UDPClient.hpp
include/communication/socket/server/: Server.hpp  TCPServer.hpp  UDPServer.hpp
include/perception/: CameraStrategy.hpp  NaoqiCameraStrategy.hpp  Perception.hpp
include/perception/ballDetector/: BallDetector.hpp
include/perception/camera/: Camera.hpp  CameraStrategy.hpp  NaoqiCamera.hpp  NaoqiCameraStrategy.hpp  V4L2Camera.hpp  V4L2CameraStrategy.hpp
include/perception/cascade/: cascade-2024-10.xml
include/perception/detectors/: BallDetector.hpp
install/: setup.sh  setupGameController.sh
lib/: NaoqiLog.cpp
lib/Config/: INIParser.cpp
lib/Logs/: EasyLogging.cc  EasyLogging.h  NaoqiLog.cpp
src/: Builder.cpp  UnBeatables.cpp
src/action/: Action.cpp
src/action/Motion/: Motion.cpp
src/action/speak/: Speak.cpp
src/behavior/: Behavior.cpp
src/communication/: Communication.cpp
src/communication/gameController/: GameController.cpp
src/communication/socket/client/: TCPClient.cpp  UDPClient.cpp
src/communication/socket/server/: TCPServer.cpp  UDPServer.cpp
src/perception/: CameraStrategy.cpp  NaoqiCameraStrategy.cpp  Perception.cpp
src/perception/ballDetector/: BallDetector.cpp
src/perception/camera/: NaoqiCamera.cpp  NaoqiCameraStrategy.cpp  V4L2Camera.cpp
src/perception/detectors/: BallDetector.cpp
